--- a/neighborhood.html
+++ b/neighborhood.html
@@ -22,13 +22,13 @@
   </header>
   <main>
     <div>
-      <img src="images/bend_in_the_road-min.png"
+      <img src="bend_in_the_road-min.png"
         alt="a purple tree stands in contrast to the green leaved trees along a bend in the road" width="100">
-      <img src="images/pink_blossoms-min.png" alt="small pink blossoms on an otherwise green leaved tree" width="100">
-      <img src="images/blooming_trees-min.png" alt="brown labradoodle sitting in front of white and purple blooming  trees"
+      <img src="pink_blossoms-min.png" alt="small pink blossoms on an otherwise green leaved tree" width="100">
+      <img src="blooming_trees-min.png" alt="brown labradoodle sitting in front of white and purple blooming  trees"
         width="100">
-      <img src="images/falling_petals-min.png" alt="a purple tulip tree that is beginning to shed its petals" width="100">
-      <img src="images/hanging_plants-min.png" alt="red and green plants in a decorative hanging basket" width="100">
+      <img src="falling_petals-min.png" alt="a purple tulip tree that is beginning to shed its petals" width="100">
+      <img src="hanging_plants-min.png" alt="red and green plants in a decorative hanging basket" width="100">
       
     </div>
   </main>
