--- a/parks.html
+++ b/parks.html
@@ -17,19 +17,19 @@
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <img src="BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Michigan Parks</h1>
 
   </header>
   <main>
     <div>
-      <img src="images/bacon_in_the_woods-min.png" alt="brown labradoodle sitting near a stream in a wooded setting"
+      <img src="bacon_in_the_woods-min.png" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
-      <img src="images/bacon_near_the_fort-min.png"
+      <img src="bacon_near_the_fort-min.png"
         alt="brown labradoodle posing in front of a makeshift fort made of branches" width="100">
-      <img src="images/downed_tree-min.png" alt="a downed tree crossign a stream" width="100">
-      <img src="images/fort_in_woods-min.png" alt="a small fort made of branches" width="100">
-      <img src="images/huron_river_cascades-min.JPG" alt=" two people on a kayak approaching some small rapids" width="100">
+      <img src="downed_tree-min.png" alt="a downed tree crossign a stream" width="100">
+      <img src="fort_in_woods-min.png" alt="a small fort made of branches" width="100">
+      <img src="huron_river_cascades-min.JPG" alt=" two people on a kayak approaching some small rapids" width="100">
 
     </div>
 
